--- a/PDS_Graded Assignment-1.ipynb
+++ b/PDS_Graded Assignment-1.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 59,
    "id": "eaadf7c1-d8e2-424e-83d8-078e44838c99",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,8 @@
     "import seaborn as sns\n",
     "\n",
     "# Read the dataset\n",
-    "fifa_df = pd.read_csv('fifa.csv')"
+    "fifa_df = pd.read_csv('fifa.csv')\n",
+    "fifa_df = pd.read_csv('fifa_ variable_information.csv')"
    ]
   },
   {
